[tool.poetry]
name = "platformer"
version = "0.1.0"
description = "Platformer game using pygame."
authors = ["Carl Naso <carl.naso@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.6.0"
PyTMX = "^3.32"
black = "^24.8.0"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "--cov=platformer --cov-report html --cov-report term"
